--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,27 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; At this stage can only get faketests working,  this might be enough to get the 
+; to get PID loop, and multiwii tested though.
+
+[platformio]
+default_envs = native
+
+[env:native]
+platform = native
+lib_deps = ArduinoFake
+build_flags = -std=gnu++11 -DNATIVE=1  -DSERIAL_BAUD=9600  -DMAIN_LOOP_DELAY=200
+test_framework = unity
+lib_compat_mode = off
+; debug_test = test_multiwii
+; debug_init_break = tbreak main
+
 [env:nano33ble]
 platform = nordicnrf52
+lib_deps = 
+    arduino-libraries/Arduino_BMI270_BMM150@^1.2.1
 board = nano33ble
 framework = arduino
+upload_protocol = sam-ba
+test_ignore = *
+build_flags = -DSERIAL_PORT=Serial -DSERIAL_BAUD=9600  -DMBED=1 -DMAIN_LOOP_DELAY=200
