--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ lib_deps = ArduinoFake
 build_flags = -std=gnu++11 -DNATIVE=1  -DSERIAL_BAUD=9600  -DMAIN_LOOP_DELAY=200
 test_framework = unity
 lib_compat_mode = off
-debug_test = test_rringress
+debug_test = test_rrfunctions
 debug_init_break = tbreak main
 
 [env:nano33ble]
