--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ default_envs = native
 [env:native]
 platform = native
 lib_deps = ArduinoFake
+     arduino-libraries/Arduino_BMI270_BMM150@^1.2.1
 build_flags = -std=gnu++11 -DNATIVE=1  -DSERIAL_BAUD=9600  -DMAIN_LOOP_DELAY=200
 test_framework = unity
 lib_compat_mode = off
