Add WProgram.h header file; define support wrapper for old libraries and include Arduino.h. Update rrblemappings.hpp to introduce SAMPLE_TIME constant. Refactor rrfunctions.cpp to use SAMPLE_TIME in delay function. Enhance test suite with rotate_r test case for drone rotation functionality.

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ default_envs = native
 platform = native
 lib_deps = ArduinoFake
      arduino-libraries/Arduino_BMI270_BMM150@^1.2.1
+     br3ttb/PID@^1.2.1
 build_flags = -std=gnu++11 -DNATIVE=1  -DSERIAL_BAUD=9600  -DMAIN_LOOP_DELAY=200
 test_framework = unity
 lib_compat_mode = off
@@ -28,6 +29,7 @@ debug_init_break = tbreak main
 platform = nordicnrf52
 lib_deps = 
     arduino-libraries/Arduino_BMI270_BMM150@^1.2.1
+    br3ttb/PID@^1.2.1
 board = nano33ble
 framework = arduino
 upload_protocol = sam-ba
