Enhance robot control functionality; add distance tracking in rrstate, implement status reporting in rrfunctions, and refactor move logic to utilize distance delta. Update BLE CLI test script for new command structure.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "any": "cpp",
-        "typeindex": "cpp"
+        "typeindex": "cpp",
+        "ios": "cpp"
     }
 }
